# cx58

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  WORKLOG.md
.cargo/: config.toml
.cursor/rules/: codex-memory.mdc
docs/: model-settings-sidebar-plan.md  reliability-plan-2026-06-24.md
locales/: languages.json5  languages.yaml
locales/de/: main.ftl
locales/en/: main.ftl
locales/uk/: main.ftl
src/: app.rs  auth.rs  auth_ssr.rs  chunk_assembler.rs  config.rs  error.rs  events.rs  hmac.rs  lib.rs  llm_stream.rs  main.rs  model_settings.rs  proxy_reports.rs  proxy_tree.rs  rbac.rs  rback.rs  server_fn.rs  ssr.rs  state.rs  stats.rs  stop.rs
src/components/: chat.rs  chat_client.rs  chat_context.rs  chat_data.rs  chat_types.rs  home_page.rs  lang.rs  media_proxy_script.rs  message_renderer.rs  mod.rs  model_settings_panel.rs  node_info_display.rs  play.rs  popup_script.rs  reports_panel.rs  show_carusel.rs  show_comparison.rs  show_comparsion.rs  show_context_request.rs  show_description.rs  show_tree.rs  side_body.rs  side_top.rs  sidebar.rs  tree.rs  user_info.rs
style/: _base.scss  _variables.scss  main.scss
style/components/: _buttons.scss  _carusel.scss  _chat.scss  _description.scss  _faq.scss  _lang.scss  _profile.scss  _sidebar.scss  _sidebar_body.scss  _sse.scss  _tooltip.scss  _tree.scss
tests/: auth_flows.rs  auth_integration.rs  security_headers.rs
