[package]
name = "gmr"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8.7", optional = true, features = ["macros"] }
axum-extra ={ version= "0.12.2", features = ["cookie"] }
leptos_axum = { version = "0.8.7", optional = true }
leptos = { version = "0.8.14", features = ["nonce"] }
leptos_router = { version = "0.8.10", features = [] }
leptos_meta = { version = "0.8.5" }
leptos_macro = "0.8.12"
oauth2 = { version = "5.0.0",optional = true }
openidconnect = { version = "4.0.1",optional = true }
tokio = { version = "1.48.0", features = ["macros","rt-multi-thread"], optional = true }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"
anyhow = "1.0.100"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
tower-cookies = "0.11"
console_error_panic_hook = { version = "0.1.7", optional = true }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "rng-rand"] }
wasm-bindgen = { version = "0.2", features = [], optional = true }
base64 = "0.22.1"
cookie = "0.18.1"
http = "1.4.0"
chrono = { version = "0.4.42",optional = true }
tokio-util = { version = "0.7.17", features = ["io"], optional = true }
serde_json = "1.0.145"
futures-util = { version = "0.3.31",features = ["sink"] }
#log = "0.4.28"
wasm-bindgen-futures = { version = "0.4.55"}
js-sys = "0.3.83"
web-sys = { version = "0.3.83", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "Node",
] }
async-stream = "0.3.6"
futures = "0.3.31"
bytes = "1.11.0"
reqwest-wasm = "0.11.16"
regex = "1.12.2"
gloo-timers = "0.3.0"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
#    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:chrono",
#    "dep:futures",
#    "dep:reqwest",
    "dep:oauth2",
    "dep:openidconnect",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

#[target.wasm32-unknown-unknown]
#rustflags = ["--cfg", "erase_components", ]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "cx58-client"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3080) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3080"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
